--- a/news-radar.html
+++ b/news-radar.html
@@ -149,8 +149,17 @@ a{color:inherit;text-decoration:none}
 .feed-empty{display:flex;flex-direction:column;align-items:center;justify-content:center;padding:56px 20px;gap:8px;color:var(--dim);font-size:12px}
 
 /* ── SIDEBAR ─────────────────────────────────────────────────────────────── */
-.side-section{margin-bottom:24px}
+.side-section{margin-bottom:20px}
 .side-title{font-size:10px;font-weight:700;text-transform:uppercase;letter-spacing:.1em;color:var(--dim2);margin-bottom:10px;padding-bottom:8px;border-bottom:1px solid var(--sep)}
+/* mini-feed na sidebar */
+.side-feed{display:flex;flex-direction:column;gap:0}
+.side-feed-item{display:flex;align-items:flex-start;gap:7px;padding:6px 4px;border-bottom:1px solid var(--sep);cursor:pointer;transition:background .1s;border-radius:4px}
+.side-feed-item:last-child{border-bottom:none}
+.side-feed-item:hover{background:rgba(255,255,255,.03)}
+.side-feed-dot{width:4px;height:4px;border-radius:50%;background:var(--dim2);flex-shrink:0;margin-top:5px}
+.side-feed-dot.hot{background:var(--red)}.side-feed-dot.rising{background:var(--yellow)}
+.side-feed-title{font-size:11px;font-weight:400;line-height:1.35;color:var(--dim);display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden}
+.side-feed-meta{font-size:10px;color:var(--dim2);margin-top:1px}
 
 /* ── TOP 10 ──────────────────────────────────────────────────────────────── */
 .top10-item{display:flex;align-items:flex-start;gap:7px;padding:6px 4px;cursor:pointer;transition:background .1s;border-bottom:1px solid var(--sep)}
@@ -310,6 +319,10 @@ a{color:inherit;text-decoration:none}
     <div class="side-section">
       <div class="side-title">TOP 10 — Score Marco</div>
       <div id="top10-list"></div>
+    </div>
+    <div class="side-section" id="side-feed-section" style="display:none">
+      <div class="side-title">Mais noticias</div>
+      <div class="side-feed" id="side-feed"></div>
     </div>
   </div>
 </div>
@@ -778,6 +791,29 @@ function renderTop10(){
   });
 }
 
+// ─── SIDE FEED (mini-feed sidebar) ───────────────────────────────────────────
+function renderSideFeed(){
+  var all=getSorted(getFiltered());
+  var items=all.slice(11); // depois dos 2 hero + 9 grid
+  var sec=document.getElementById('side-feed-section');
+  var list=document.getElementById('side-feed');
+  if(!items.length){sec.style.display='none';return;}
+  sec.style.display='';
+  list.innerHTML='';
+  items.forEach(function(item){
+    var el=document.createElement('div');
+    el.className='side-feed-item';
+    el.innerHTML=
+      '<div class="side-feed-dot '+item.heat+'"></div>'+
+      '<div style="flex:1;min-width:0">'+
+        '<div class="side-feed-title">'+esc(item.title)+'</div>'+
+        '<div class="side-feed-meta">'+esc(item.label)+' · '+item.age+'</div>'+
+      '</div>';
+    (function(id){el.onclick=function(){openDrawer(id)}})(item.id);
+    list.appendChild(el);
+  });
+}
+
 // ─── FEED ─────────────────────────────────────────────────────────────────────
 function renderFeed(){
   var items=getSorted(getFiltered());
@@ -810,7 +846,7 @@ function renderFeed(){
   root.innerHTML='';root.appendChild(feed);
 }
 
-function renderAll(){buildHeatMap();renderTop10();renderFeed()}
+function renderAll(){buildHeatMap();renderTop10();renderFeed();renderSideFeed()}
 
 // ─── DRAWER ───────────────────────────────────────────────────────────────────
 function findItem(id){
@@ -1367,7 +1403,7 @@ function renderDigest() {
   items.slice(0, 2).forEach(function(item) { heroSec.appendChild(buildHeroCard(item)); });
   root.appendChild(heroSec);
 
-  // GRID: 3-8
+  // GRID: 3-11 (6 cards, 2 linhas)
   if (items.length > 2) {
     var gridLabel = document.createElement('div');
     gridLabel.className = 'section-label';
@@ -1375,7 +1411,7 @@ function renderDigest() {
     root.appendChild(gridLabel);
     var gridSec = document.createElement('div');
     gridSec.className = 'grid-section';
-    items.slice(2, 8).forEach(function(item) { gridSec.appendChild(buildGridCard(item)); });
+    items.slice(2, 11).forEach(function(item) { gridSec.appendChild(buildGridCard(item)); });
     root.appendChild(gridSec);
   }
   // sem overflow — o resto fica no Feed
