--- a/news-radar.html
+++ b/news-radar.html
@@ -16,7 +16,7 @@
 html,body{min-height:100%;background:var(--bg);color:var(--text);font-family:-apple-system,BlinkMacSystemFont,'Inter','Segoe UI',sans-serif;font-size:13px;line-height:1.5}
 ::-webkit-scrollbar{width:5px}::-webkit-scrollbar-track{background:var(--bg)}::-webkit-scrollbar-thumb{background:var(--bg3);border-radius:3px}
 a{color:inherit;text-decoration:none}
-.page{max-width:100%;padding:20px 32px 60px}
+.page{max-width:1400px;margin:0 auto;padding:20px 32px 60px}
 
 /* ── HEADER ─────────────────────────────────────────────────────────────── */
 .header{display:flex;align-items:flex-start;justify-content:space-between;margin-bottom:22px}
